--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.0",
+    "node": "^20.19.0",
     "nodemon": "^3.1.9",
     "openai": "^4.86.2"
   }
