--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.26.1",
+    "@clerk/clerk-react": "^5.28.2",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.4",
     "clerk": "^0.8.3",
+    "clerk-react": "^0.1.9",
     "framer-motion": "^12.6.2",
     "qr-code-styling": "^1.9.1",
     "react": "^19.0.0",
